[package]
name = "breakout"
version = "0.1.0"
authors = ["Allora"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
float-cmp = "0.6.0"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]

[dependencies.amethyst]
version = "0.14.0"
features = ["no-slow-safety-checks"]